--- a/socket-app/src/app/components/document/document.component.html
+++ b/socket-app/src/app/components/document/document.component.html
@@ -1,3 +1,1 @@
-
-  <textarea #doc [(ngModel)]='document.doc' (keyup)='editDoc()'></textarea>
-
+<textarea [(ngModel)]='document.doc' (keyup)='editDoc()' placeholder='Start typing...'></textarea>
